# verity-core-banking

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  VERITY_ARC42.md  VERITY_FEATURES_USE_CASES.md  VERITY_IMPLEMENTATION_BLUEPRINT.md  batch_01.sh  batch_02.sh  batch_03.sh  batch_04.sh  batch_05.sh  batch_06.sh  batch_07.sh  batch_08.sh  batch_09.sh  batch_10.sh  batch_11.sh  batch_12.sh  batch_13.sh  batch_14.sh  batch_15.sh  deny.toml  docker-compose.yml  fix_vaos_core.sh  install-deps.sh  master_build_01.sh  master_build_02.sh  master_build_03.sh  master_build_04.sh  master_build_05.sh  (+18 more)
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
config/: core-production.toml  gateway.toml
crates/asm/cascade_guard/: Cargo.toml
crates/asm/cascade_guard/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/drift_monitor/: Cargo.toml
crates/asm/drift_monitor/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/drift_monitor/src/detectors/: mod.rs
crates/asm/execution_guard/: Cargo.toml
crates/asm/execution_guard/src/: engine.rs  errors.rs  lib.rs  mcp_validator.rs  trajectory.rs  types.rs
crates/asm/execution_guard/src/backends/: kavach.rs  mod.rs
crates/asm/execution_guard/tests/: guard_test.rs
crates/asm/fim/: Cargo.toml
crates/asm/fim/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/kill_switch/: Cargo.toml
crates/asm/kill_switch/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/mem_lineage/: Cargo.toml
crates/asm/mem_lineage/src/: dag.rs  engine.rs  errors.rs  lib.rs  merkle.rs  quarantine.rs  types.rs
crates/asm/mem_lineage/tests/: lineage_test.rs
crates/asm/prompt_guardian/: Cargo.toml
crates/asm/prompt_guardian/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/prompt_guardian/src/sanitizers/: armorer.rs  encoder.rs  injection.rs  jailguard.rs  llm_guard.rs  mod.rs
crates/asm/prompt_guardian/tests/: guardian_test.rs
crates/asm/rampart/: Cargo.toml
crates/asm/rampart/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/vet_pipeline/: Cargo.toml
crates/asm/vet_pipeline/src/: engine.rs  errors.rs  lib.rs  types.rs
crates/asm/vet_pipeline/src/stages/: dynamic_sandbox.rs  human_review.rs  mod.rs  semantic_scanner.rs  static_analyzer.rs
crates/asm/vet_pipeline/tests/: vet_test.rs
crates/common/crypto/: Cargo.toml
crates/common/crypto/src/: constant_time.rs  errors.rs  hash.rs  lib.rs  sign.rs  types.rs
crates/common/crypto/tests/: crypto_test.rs
crates/common/telemetry/: Cargo.toml
crates/common/telemetry/src/: errors.rs  init.rs  lib.rs  metrics.rs  spans.rs  types.rs
crates/common/telemetry/tests/: telemetry_test.rs
crates/common/validation/: Cargo.toml
crates/common/validation/src/: account.rs  bian.rs  currency.rs  errors.rs  lib.rs  regulatory.rs  types.rs
crates/common/validation/tests/: validation_test.rs
crates/haip/claim/: Cargo.toml
crates/haip/claim/src/: budget.rs  decision.rs  engine.rs  errors.rs  lib.rs  types.rs
crates/haip/claim/tests/: claim_test.rs
crates/haip/dashboard/: Cargo.toml
crates/haip/dashboard/src/: activity.rs  engine.rs  errors.rs  lib.rs  policy.rs  session.rs  types.rs
crates/haip/dashboard/tests/: dashboard_test.rs
crates/haip/eta/: Cargo.toml
crates/haip/eta/src/: classifier.rs  engine.rs  errors.rs  lib.rs  tone.rs  types.rs
crates/haip/eta/tests/: eta_test.rs
crates/haip/inclusive/: Cargo.toml
crates/haip/inclusive/src/: engine.rs  errors.rs  lib.rs  profile.rs  types.rs  validator.rs
crates/haip/inclusive/tests/: inclusive_test.rs
crates/vaos/assume_guarantee/: Cargo.toml
crates/vaos/assume_guarantee/src/: contract.rs  core.rs  errors.rs  lib.rs  monitor.rs
crates/vaos/compliance/: Cargo.toml
crates/vaos/compliance/src/: axioms.rs  core.rs  errors.rs  lib.rs  proof_cache.rs  verifier.rs
crates/vaos/consensus/: Cargo.toml
crates/vaos/consensus/src/: core.rs  errors.rs  lib.rs  oscillator.rs  qss.rs
crates/vaos/containment/: Cargo.toml
crates/vaos/containment/src/: boundary.rs  core.rs  errors.rs  havoc.rs  lib.rs
crates/vaos/core/: Cargo.toml
crates/vaos/core/src/: errors.rs  lib.rs  provenance.rs  traits.rs  types.rs
crates/vaos/ehv/: Cargo.toml
crates/vaos/ehv/src/: compiler.rs  engine.rs  errors.rs  lib.rs  policy.rs  types.rs
crates/vaos/ehv/tests/: ehv_test.rs
crates/vaos/emergent/: Cargo.toml
crates/vaos/emergent/src/: core.rs  errors.rs  learner.rs  lib.rs  validator.rs
crates/vaos/evidence/: Cargo.toml
crates/vaos/evidence/src/: audit.rs  engine.rs  errors.rs  lib.rs  types.rs
crates/vaos/evidence/tests/: evidence_test.rs
crates/verity/: Cargo.toml
crates/verity-core-api/: Cargo.toml
crates/verity-core-api/src/: accounts.rs  agents.rs  common.rs  compliance.rs  ledger.rs  lib.rs  payments.rs
crates/verity-gateway/: Cargo.toml
crates/verity-gateway/src/: auth.rs  config.rs  health.rs  main.rs  proxy.rs  server.rs
crates/verity/src/: archive.rs  backup.rs  benchmark.rs  config_audit.rs  hsm.rs  main.rs  server.rs  shutdown.rs  vault.rs
crates/verity/src/api/: accounts.rs  agents.rs  compliance.rs  ledger.rs  mod.rs  payments.rs
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: LASM_MAPPING.md  LICENSE_OPERATIONS.md  VERITY_DEPLOYMENT_GUIDE.md
scripts/: generate-license.sh  manage-licenses-supabase.sh  provenance.sh  setup-haproxy.sh  setup-patroni.sh  setup-worm-archive.sh  verify.sh  verity-core.service  verity-gateway.service
supabase/: config.toml
tests/: mod.rs
vendor-keys/: vendor-private.pem  vendor-public.b64  vendor-public.pem
web/: business_plan.html  download.html  index copy.html  index.html  partners.html  pricing.html  test_index.html
workers/: Cargo.toml
workers/src/: lib.rs  router.rs
workers/src/middleware/: auth.rs  cors.rs  mod.rs  ratelimit.rs
workers/src/routes/: agent.rs  auth.rs  dashboard.rs  mod.rs  realtime.rs
workers/tests/: worker_test.rs
(+314 files in other folders)
