[workspace]
members = [
    "crates/vaos/evidence",
    "crates/vaos/ehv",
    "crates/vaos/evolution",
    "crates/verity-gateway",
    "crates/verity-core-api",
    "crates/verity",
    "crates/vaos/core",
    "crates/vaos/hti",
    "crates/vaos/session",
    "crates/vaos/trust_lattice",
    "crates/vaos/compliance",
    "crates/vaos/containment",
    "crates/vaos/assume_guarantee",
    "crates/vaos/runtime_tla",
    "crates/vaos/identity",
    "crates/vaos/privacy",
    "crates/vaos/consensus",
    "crates/vaos/emergent",
    "crates/vaos/pqc_tokens",
    "crates/vaos/sil3",
    "crates/vcbp/ledger",
    "crates/vcbp/bian",
    "crates/vcbp/product_engine",
    "crates/vcbp/banking_ops",
    "crates/vcbp/identity",
    "crates/vcbp/payments",
    "crates/vcbp/reporting",
    "crates/vcbp/fraud",
    "crates/vcbp/federated",
    "crates/vcbp/quantum",
    "crates/vcbp/edge",
    "crates/vcbp/migration",
    "crates/vcbp/marketplace",
    "crates/vcbp/regtech",
    "crates/vcbp/fhe",
    "crates/vcbp/pqc",
    "crates/vcbp/risk",
    "crates/vcbp/assets",
    "crates/vcbp/go_dark",
    "crates/haip/claim",
    "crates/haip/eta",
    "crates/haip/dashboard",
    "crates/haip/inclusive",
    "crates/asm/prompt_guardian",
    "crates/asm/mem_lineage",
    "crates/asm/execution_guard",
    "crates/asm/vet_pipeline",
    "crates/asm/drift_monitor",
    "crates/asm/kill_switch",
    "crates/asm/cascade_guard",
    "crates/asm/fim",
    "crates/asm/rampart",
    "crates/common/validation",
    "crates/common/telemetry",
    "crates/common/crypto",
    "crates/vcbp/fido",
    "crates/vcbp/psi",
    "crates/vcbp/zkpay",
    "crates/vcbp/confidential",
]
resolver = "2"

[workspace.dependencies]
hex = "0.4"
rand = "0.8"
z3 = "0.12"
crdts = "7.3"
axum = { version = "0.8", features = ["json", "tokio"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace", "limit"] }
tower = { version = "0.5", features = ["util", "limit", "load-shed"] }
tokio-stream = "0.1"
rust-embed = "8"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.0"
blake3 = "1.0"
ed25519-dalek = "2.0"
pasetors = "0.7.8"
tla-checker = "0.1.0"  # TLA+ runtime checker (placeholder)
rs_merkle = "2.2"  # Merkle tree library
lean-rs = "0.1"  # Lean 4 FFI bindings
risc0-zkvm = "0.21"  # zkVM interface
orchid-consensus = "0.1.0"  # Quantum consensus
ruqu-algorithms = "2.0.5"  # Quantum optimizer
tfhe = "1.6"  # Fully Homomorphic Encryption
shamir-secret = "0.1"  # Secure Multi-Party Computation
opendp = "0.14"  # Differential Privacy
tract-onnx = "0.21"  # Graph Neural Networks (ONNX runtime)
dsfl = "0.1.0"  # Federated Learning
opentelemetry = "0.25"
prometheus = "0.14"
thiserror = "2.0"
tokio-test = "0.4"
async-trait = "0.1"
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/DamainRamsajan/verity-core-banking"
