[package]
name = "verity-workers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Cloudflare Workers — Edge API Gateway (Rust WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.6"
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
tracing.workspace = true
anyhow.workspace = true

# Web Crypto API bindings for Workers
web-sys = { version = "0.3", features = ["Crypto", "CryptoKey", "SubtleCrypto"] }
js-sys = "0.3"

# D1 database binding
worker-kv = "0.6"

[profile.release]
lto = true
opt-level = "s"
strip = true
