[package]
name = "verity-core-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity – Shared API types for Gateway and Core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
