[package]
name = "verity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "verity"
path = "src/main.rs"

[dependencies]
vaos-core = { path = "../vaos/core" }
vaos-hti = { path = "../vaos/hti" }
vcbp-ledger = { path = "../vcbp/ledger" }
vcbp-payments = { path = "../vcbp/payments" }
vcbp-reporting = { path = "../vcbp/reporting" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
base64 = "0.22"
licenz-core = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"