[package]
name = "verity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "verity"
path = "src/main.rs"

[dependencies]
vaos-core = { path = "../vaos/core" }
vaos-hti = { path = "../vaos/hti" }
vcbp-ledger = { path = "../vcbp/ledger" }
vcbp-payments = { path = "../vcbp/payments" }
vcbp-reporting = { path = "../vcbp/reporting" }
vcbp-bian = { path = "../vcbp/bian" }
vcbp-banking-ops = { path = "../vcbp/banking_ops" }
verity-core-api = { path = "../verity-core-api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
ed25519-dalek = "2"
base64 = "0.22"
licenz-core = "0.2.0"
axum.workspace = true
tower-http.workspace = true
tower.workspace = true
tokio-stream.workspace = true

# Operational CLIs
criterion = { version = "0.5", features = ["html_reports"] }
blake3.workspace = true
hex = "0.4"

# Vault (optional, feature-gated for production)
vault-client = { version = "0.1", optional = true }

# HSM / PKCS#11 (optional, feature-gated for production)
pkcs11 = { version = "0.5", optional = true }

[features]
default = []
production = ["vault-client", "pkcs11"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
