[package]
name = "asm-execution-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM – ExecutionGuard Tool Execution Sandbox"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
async-trait.workspace = true
