[package]
name = "asm-fim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM – Financial Invariants Monitor"

[dependencies]
vaos-core = { path = "../../vaos/core" }
vcbp-ledger = { path = "../../vcbp/ledger" }
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true
