[package]
name = "asm-kill-switch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM — Kill Switch Protocol (3-tier forensic termination)"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
