[package]
name = "asm-mem-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM — MemLineage Memory Integrity Guardian (zero ASR, RFC-6962 Merkle log)"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
async-trait.workspace = true

# Merkle tree for RFC-6962 log
rs-merkle = "2.2"

# Serialization
serde_cbor = "0.11"

[dev-dependencies]
tokio-test.workspace = true
