[package]
name = "asm-mem-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM – MemLineage Memory Integrity Guardian"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
async-trait.workspace = true
rs_merkle = "1.5.0"
