[package]
name = "asm-prompt-guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity ASM – PromptGuardian Input Sanitization"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
regex = "1.11"
base64 = "0.22"
hex = "0.4"
