[package]
name = "common-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Common — Shared Observability (OpenTelemetry, tracing, metrics)"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# OpenTelemetry SDK
opentelemetry_sdk = "0.25"
opentelemetry-otlp = "0.32"
opentelemetry-semantic-conventions = "0.25"

# axum integration for HTTP span propagation
tower-http = "0.6"
