[package]
name = "haip-claim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity HAIP — Cognitive Load-Aware Agent Interface (CLAIM)"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
