[package]
name = "haip-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity HAIP — Delegative Governance Dashboard Backend"

[dependencies]
vaos-core = { path = "../../vaos/core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
