[package]
name = "vaos-assume-guarantee"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent OS — Assume-Guarantee Contract Monitor (TLA+)"

[dependencies]
vaos-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# TLA+ model-based testing framework
# TLA+ model checker
tla-checker = "0.1.0"
