[package]
name = "vaos-compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent OS — Lean-Agent Compliance Verifier (Lean 4 kernel)"

[dependencies]
chrono.workspace = true
vaos-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true

# Lean 4 embedded theorem-prover capability
# External verification foundation — SMT-LIB2 + Lean 4 export
# Lean 4 FFI bindings

[dev-dependencies]
tokio-test.workspace = true
