[package]
name = "vaos-containment"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent OS — Containment Verification Layer (Moon et al., Dafny)"

[dependencies]
vaos-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
