[package]
name = "vaos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent OS — Capability Microkernel"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
rust_decimal.workspace = true
pasetors = "0.7.8"
tla-checker = "0.3.11"
