[package]
name = "vaos-ehv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent Integrity Engine – EHV‑Style Governance‑Aware JIT Compiler"

[dependencies]
vaos-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
async-trait.workspace = true
crdts.workspace = true
