[package]
name = "vaos-emergent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verity Agent OS — Emergent Protocol Learner (MARL-CPC)"

[dependencies]
vaos-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
